--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -1,58 +1,62 @@
-<div class="fr-grid-row fr-grid-row--gutters">
-    <div class="fr-col-12 fr-col-lg-12">
-        <div class="fr-card fr-card--no-arrow">
-            <div class="fr-card__body fr-my-2w">
-                <div class="block--row-strech" id="{{object_field}}_div">
-                    <div class="block--row-strech-1">
-                        <h4 class="fr-card__title">
-                            Stationnements
-                        </h4>
+{% load custom_filters %}
+
+{% if convention_form_steps|is_a_step:'Stationnement' %}
+    <div class="fr-grid-row fr-grid-row--gutters">
+        <div class="fr-col-12 fr-col-lg-12">
+            <div class="fr-card fr-card--no-arrow">
+                <div class="fr-card__body fr-my-2w">
+                    <div class="block--row-strech" id="{{object_field}}_div">
+                        <div class="block--row-strech-1">
+                            <h4 class="fr-card__title">
+                                Stationnements
+                            </h4>
+                        </div>
+                        {% if convention|display_convention_form_progressbar %}
+                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
+                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                            </a>
+                        {% endif %}
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% endif %}
-                </div>
-                <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table aria-label="Types de stationnement">
-                        <thead>
-                            <tr>
-                                {% if convention|display_comments %}
-                                    {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
-                                {% endif %}
-                                <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
-                                <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
-                                <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/form/required_field_star.html" %}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for stationnement in stationnements %}
-                                {% with stationnement_uuid=stationnement.uuid|slugify %}
-                                    {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
-                                        <tr id="{{main_object_field}}_group">
-                                            {% if convention|display_comments %}
-                                                <td id="{{main_object_field}}_div">
-                                                    {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
+                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                        <table aria-label="Types de stationnement">
+                            <thead>
+                                <tr>
+                                    {% if convention|display_comments %}
+                                        {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
+                                    {% endif %}
+                                    <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
+                                    <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
+                                    <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/form/required_field_star.html" %}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for stationnement in stationnements %}
+                                    {% with stationnement_uuid=stationnement.uuid|slugify %}
+                                        {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
+                                            <tr id="{{main_object_field}}_group">
+                                                {% if convention|display_comments %}
+                                                    <td id="{{main_object_field}}_div">
+                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
+                                                    </td>
+                                                {% endif %}
+                                                <td>
+                                                    {{ stationnement.get_typologie_display }}
                                                 </td>
-                                            {% endif %}
-                                            <td>
-                                                {{ stationnement.get_typologie_display }}
-                                            </td>
-                                            <td>
-                                                {{ stationnement.nb_stationnements }}
-                                            </td>
-                                            <td>
-                                                {{ stationnement.loyer|floatformat:2 }}
-                                            </td>
-                                        </tr>
+                                                <td>
+                                                    {{ stationnement.nb_stationnements }}
+                                                </td>
+                                                <td>
+                                                    {{ stationnement.loyer|floatformat:2 }}
+                                                </td>
+                                            </tr>
+                                        {% endwith %}
                                     {% endwith %}
-                                {% endwith %}
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+{% endif %}
