--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -81,6 +81,7 @@
                         {% include "conventions/recapitulatif/pieces_jointes.html" %}
                     {% endif %}
                     {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' %}
+                    {% include "conventions/recapitulatif/attribution.html" with target_url='conventions:attribution' %}
                     {% include "conventions/recapitulatif/comments.html" with target_url='conventions:comments' %}
                 {% endif %}
 
