--- a/templates/conventions/recapitulatif/attribution.html
+++ b/templates/conventions/recapitulatif/attribution.html
@@ -1,6 +1,7 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'Commentaires' %}
+{% if convention_form_steps|is_a_step:'Attribution' %}
+
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-lg-12">
             <div class="fr-card fr-card--no-arrow">
@@ -8,14 +9,12 @@
                     <div class="block--row-strech" id="{{object_field}}_div">
                         <div class="block--row-strech-1">
                             <h4 class="fr-card__title">
-                                Informations à l'attention du service instructeur
+                                Attribution
                             </h4>
                         </div>
                         {% include "conventions/actions/goto.html" %}
                     </div>
-                    <div class="table--limited-height">
-                        {% include "common/display_text_and_files_if_exists.html" with text=convention.comments|get_text_from_textfiles file_list=convention.comments|get_files_from_textfiles %}
-                    </div>
+                    blah blah blah…
                 </div>
             </div>
         </div>
