--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -82,6 +82,7 @@
                     {% endif %}
                     {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' %}
                     {% include "conventions/recapitulatif/attribution.html" with target_url='conventions:attribution' %}
+                    {% include "conventions/recapitulatif/variantes.html" with target_url='conventions:variantes' %}
                     {% include "conventions/recapitulatif/comments.html" with target_url='conventions:comments' %}
                 {% endif %}
 
