update: check if there is current avenant + init form to upload avenants

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -224,6 +224,9 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .dropdown-menu.apilos-dropdown-menu {
   z-index: 100000;
 }
+.apilos-avenant_type:not(:last-child):after {
+  content: ", ";
+}
 
 .block--row-strech {
   display: flex;
