--- a/templates/conventions/avenant/new_avenants_for_avenant.html
+++ b/templates/conventions/avenant/new_avenants_for_avenant.html
@@ -5,20 +5,18 @@
 {% load static %}
 
 {% block content %}
-    <div class="fr-col-12">
-        <h2 class="fr-text--lg">Téleverser l'avenant</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <!-- <div class="fr-upload-group fr-mt-5w">
-                <label class="fr-label" for="file-upload">Téléverser la convention (en PDF) {% include "common/form/required_field_star.html" %}
-                    <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
-                </label>
-                <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe" required>
-            </div>
-            <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left">Créer l'avenant</button> -->
-            <input type='submit' value='submit'>
-        </form>
+    <div class="fr-container fr-py-5w">
+        <div class="fr-col-12 fr-mt-2w fr-mb-4w">
+            <h2>{{convention}}</h2>
+            {% include "conventions/avenant/list_avenants_for_avenant.html" with conventions=avenants %}
+            {% include "conventions/avenant/televersement_avenants_for_avenant_start.html" with ongoing_avenants=ongoing_avenants %}
+            <hr>
+            <h2 class="fr-mt-4w fr-text--lg">Créer un nouvel avenant</h2>
+            <p>Après avoir téléversé l'ensemble des avenants existants, vous pouvez créer votre nouvel avenant.</p>
+            <a class="fr-btn" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                Aller à la création du nouvel avenant
+            </a>
+        </div>
     </div>
 {% endblock %}
 
