manage attach files and previous step in form

--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -16,7 +16,7 @@
         {% include "common/step_progressbar.html"%}
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
-                [FOYER] adaptation des annexes pour le cas des Foyers<br>
+                {% comment %} FIXME [FOYER] adaptation des annexes pour le cas des Foyers<br> {% endcomment %}
 
                 {% include "conventions/common/form_annexes.html" %}
                 {% include "conventions/common/form_footer_button.html" %}
