--- a/templates/conventions/common/form_logements.html
+++ b/templates/conventions/common/form_logements.html
@@ -1,6 +1,12 @@
+{% load static %}
 {% load custom_filters %}
 
 <div class="fr-grid-row fr-grid-row--gutters">
+    {% if convention.is_avenant %}
+        <div class="fr-col-12 fr-mb-2w">
+            {% include "common/form/input_number.html" with display_inline=True form_input=form.nb_logements object_field="lot__nb_logements__"|add:form.uuid.value %}
+        </div>
+    {% endif %}
     <div class="fr-col-md-12">
 
         <h4>Logements associés à la convention</h4>
@@ -160,3 +166,4 @@
 {% endif %}
 
 {% include "common/required_fields_info.html" %}
+<script type="text/javascript" src="{% static "js/logements-table.js" %}" nonce="{{request.csp_nonce}}"></script>
